# kavach

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  FEATURE_STATUS.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  kavach.db  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  003_shield_tables.py  20260714_5dc51aa46843_add_graph_models_and_pgvector.py
backend/app/: config.py  deidentify.py  llm_client.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py
backend/app/core/: database.py  deps.py  errors.py  middleware.py  pagination.py  redis.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  graph.py  pii.py  shield.py  user.py
backend/app/routes/: crimemap.py  fraudscope.py  networkx_routes.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  clustering.py  deidentify.py  embeddings.py  entity_extractor.py  language.py  live_companion.py  (+7 more)
backend/eval/: __init__.py  benchmark.py
backend/scripts/: batch_import.py  fetch_datasets.sh  seed_synthetic.py  verify_chain.py
backend/seed/: seed_cases.py  seed_districts.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_authz_matrix.py  test_benchmark.py  test_cases.py  test_deidentify.py  test_embeddings_and_clustering.py  test_entity_extractor.py  test_health.py  test_language.py  test_llm_client.py  test_pii.py  test_routes.py  test_shield.py  test_shield_integration.py  test_takedown_brief.py
(+77 files in other folders)
