[project]
name = "kavach-backend"
version = "2.0.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]  # S = bandit-style security rules
ignore = ["S101"]  # asserts fine in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
